# 3module_orenburg_backend

./: ..gitignore.un~  db.sqlite3  manage.py  pyproject.toml
Block/: admin.py  models.py  serializers.py  urls.py  validatiors.py  views.py
Block/migrations/: 0001_initial.py  0002_rename_room_id_block_room_alter_room_status.py  0003_room_open_room_user_alter_block_room_and_more.py  0004_block_type.py
ThirdModuleOrenburgBackend/: asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
